--- a/Linear Equations Solver/Equations/task-info.yaml
+++ b/Linear Equations Solver/Equations/task-info.yaml
@@ -268,5 +268,13 @@ files:
     }
   learner_created: false
 feedback_link: https://hyperskill.org/projects/40/stages/211/implement#comment
-status: Unchecked
-record: -1
+status: Failed
+feedback:
+  message: |-
+    Error in test #1
+
+    Program ran out of input. You tried to read more than expected.
+
+    Arguments: -in in.txt -out out.txt
+  time: Thu, 03 Nov 2022 11:35:55 UTC
+record: 3
