--- a/Linear Equations Solver/X and Y/task-info.yaml
+++ b/Linear Equations Solver/X and Y/task-info.yaml
@@ -85,5 +85,8 @@ files:
     }
   learner_created: false
 feedback_link: https://hyperskill.org/projects/40/stages/210/implement#comment
-status: Unchecked
-record: -1
+status: Solved
+feedback:
+  message: Congratulations!
+  time: Thu, 03 Nov 2022 11:52:02 UTC
+record: 2
