--- a/Linear Equations Solver/Complex numbers/task-info.yaml
+++ b/Linear Equations Solver/Complex numbers/task-info.yaml
@@ -659,6 +659,6 @@ files:
         }
     }
   learner_created: false
-feedback_link: https://hyperskill.org/projects/40/stages/213/implement#comment
+feedback_link: https://hyperskill.org/learn/step/5309#comment
 status: Unchecked
 record: -1
