--- a/Linear Equations Solver/X and Y/task-info.yaml
+++ b/Linear Equations Solver/X and Y/task-info.yaml
@@ -84,7 +84,7 @@ files:
         }
     }
   learner_created: false
-feedback_link: https://hyperskill.org/projects/40/stages/210/implement#comment
+feedback_link: https://hyperskill.org/learn/step/5306#comment
 status: Solved
 feedback:
   message: Congratulations!
