--- a/course-remote-info.yaml
+++ b/course-remote-info.yaml
@@ -3,7 +3,7 @@ hyperskill_project:
   ide_files: https://stepik.org/media/attachments/lesson/203891/additional_files.json
   is_template_based: false
   use_ide: true
-update_date: Thu, 03 Nov 2022 08:56:35 UTC
+update_date: Fri, 04 Nov 2022 12:53:52 UTC
 stages:
 - id: 209
   step: 5305
@@ -13,7 +13,7 @@ stages:
   is_completed: true
 - id: 211
   step: 5307
-  is_completed: false
+  is_completed: true
 - id: 212
   step: 5308
   is_completed: false
