--- a/Linear Equations Solver/Simple and real/task-info.yaml
+++ b/Linear Equations Solver/Simple and real/task-info.yaml
@@ -64,7 +64,7 @@ files:
         }
     }
   learner_created: false
-feedback_link: https://hyperskill.org/projects/40/stages/209/implement#comment
+feedback_link: https://hyperskill.org/learn/step/5305#comment
 status: Solved
 feedback:
   message: Congratulations!
