--- a/Linear Equations Solver/When things get complicated/task-info.yaml
+++ b/Linear Equations Solver/When things get complicated/task-info.yaml
@@ -487,6 +487,6 @@ files:
         }
     }
   learner_created: false
-feedback_link: https://hyperskill.org/projects/40/stages/212/implement#comment
+feedback_link: https://hyperskill.org/learn/step/5308#comment
 status: Unchecked
 record: -1
